16_subseq/grade.txt
Grading at Sun Jul 19 18:36:47 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c:2:1: error: unknown type name ‘size_t’
 size_t maxSeq(int * array, size_t  n){
 ^
maxSeq.c:2:28: error: unknown type name ‘size_t’
 size_t maxSeq(int * array, size_t  n){
                            ^
The code did not compile!

Overall Grade: F
